# keyforge

./: .gitignore  ARCHITECTURE.md  CI-CD.md  Cargo.toml  FUTURE-PHASES.md  GLOSSARY.md  LANDING-PAGE.md  PHASE-1-SPEC.md  PLATFORM-SPEC.md  README.md  SECURITY.md  TESTING.md  UI-SPEC.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: pr-check.yml  release-mobile.yml  release.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: bridge.ts  icons.ts  main.ts  toast.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/tests/: e2e_tests.rs
apps/desktop/src/screens/: add-token.ts  lock.ts  tokens.ts
apps/desktop/src/styles/: app.css  reset.css  tokens.css
crates/keyforge-crypto/: Cargo.toml
crates/keyforge-crypto/src/: aead.rs  error.rs  hotp.rs  kdf.rs  lib.rs  random.rs  totp.rs
crates/keyforge-crypto/tests/: property_tests.rs
crates/keyforge-sync/: Cargo.toml
crates/keyforge-sync/src/: lib.rs
crates/keyforge-vault/: Cargo.toml
crates/keyforge-vault/src/: constants.rs  db.rs  error.rs  export.rs  import.rs  lib.rs  migrations.rs  token.rs
crates/keyforge-vault/tests/: integration_tests.rs
