[workspace]
resolver = "2"
members = [
    "crates/keyforge-crypto",
    "crates/keyforge-vault",
    "crates/keyforge-sync",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/i-wajidrashid/keyforge"

[workspace.dependencies]
# Crypto
ring = "0.17"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
base32 = "0.5"

# Vault
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
proptest = "1"
tempfile = "3"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
