[package]
name = "keyforge-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Encrypted vault storage for KeyForge using SQLCipher"

[dependencies]
keyforge-crypto = { path = "../keyforge-crypto" }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
base32 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
